Issue #16145: Support legacy strings in the _csv module.